[gd_scene load_steps=11 format=3 uid="uid://ia0si54pbwna"]

[ext_resource type="Script" uid="uid://bnk24ukduhv8o" path="res://chest.gd" id="1_8uwsg"]
[ext_resource type="Texture2D" uid="uid://b8s8m8yuee4ro" path="res://addons/kenney_prototype_textures/orange/texture_02.png" id="1_twpm2"]
[ext_resource type="FontFile" uid="uid://duujpyh00pie6" path="res://JetBrainsMono-Regular.ttf" id="3_bp1or"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8uwsg"]
size = Vector3(1.5, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bp1or"]
albedo_texture = ExtResource("1_twpm2")

[sub_resource type="BoxMesh" id="BoxMesh_trlyu"]
material = SubResource("StandardMaterial3D_bp1or")
size = Vector3(1.5, 1, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bp1or"]
height = 3.0
radius = 4.0

[sub_resource type="Theme" id="Theme_trlyu"]
default_font = ExtResource("3_bp1or")

[sub_resource type="Gradient" id="Gradient_8uwsg"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.392157)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bp1or"]
gradient = SubResource("Gradient_8uwsg")

[node name="Chest" type="Node3D"]
script = ExtResource("1_8uwsg")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_8uwsg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_trlyu")

[node name="ActivateArea" type="Area3D" parent="StaticBody3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/ActivateArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CylinderShape3D_bp1or")

[node name="HUD" type="Control" parent="StaticBody3D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_trlyu")

[node name="Inventory" type="Control" parent="StaticBody3D/HUD"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="StaticBody3D/HUD/Inventory"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -320.0
offset_right = -4.0
offset_bottom = 320.0
grow_horizontal = 0
grow_vertical = 2
texture = SubResource("GradientTexture2D_bp1or")

[node name="Label" type="Label" parent="StaticBody3D/HUD/Inventory/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.5
offset_right = 24.5
offset_bottom = 23.0
grow_horizontal = 2
text = "CHEST"

[node name="GridContainer" type="GridContainer" parent="StaticBody3D/HUD/Inventory/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -284.0
offset_right = 140.0
offset_bottom = 284.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 4

[connection signal="body_entered" from="StaticBody3D/ActivateArea" to="." method="_on_activate_area_body_entered"]
[connection signal="body_exited" from="StaticBody3D/ActivateArea" to="." method="_on_activate_area_body_exited"]
